# python-in-memory-zip-files

./: main.py  pyproject.toml  sample_zip_file_implementation.py  test_main.py  text1.txt  text2.txt
