[tool.poetry]
name = "zip files in python"
version = "0.1.0"
description = "Implement in-memory zip files with python"
authors = ["Palaniyappan Ramanathan <vickypalaniapp12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.1"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
